# melwater_ana

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml
config/: backfill_20260101_20260220_pump_secondary.json  categories.json  excel_export_sources.json  production.example.json
config/insights/: action_feedback.example.csv  action_owners.example.json  brand_taxonomy.json  insight_thresholds.json  query_noise_rules.json  topic_taxonomy.json
docs/: Meltwater_API_可用字段清单.md  Meltwater_VOC导出汇总.md  README.md
docs/audits/: 2026-06-04-json-to-excel-acceptance.md  2026-06-04-json-to-excel-exploration.md  2026-06-04-project-audit.md  2026-06-10-debt-and-production-readiness-audit.md  2026-06-11-playbook-closure-gap-audit.md  2026-06-12-melwater-p0-implementation-qa.md  2026-06-12-melwater-p1-implementation-qa.md  2026-06-12-melwater-p10-commit-push-qa.md  2026-06-12-melwater-p11-remote-deploy-automation-qa.md  2026-06-12-melwater-p11-remote-deploy-automation-runbook.md  2026-06-12-melwater-p12-production-gate-qa.md  2026-06-12-melwater-p2-implementation-qa.md  (+20 more)
meltwater_excel/: __init__.py
scripts/: analytics.py  build_frontend_snapshot.py  collect.py  json_to_complete_excel.py  run_ruff_stdin.py
tests/: conftest.py  test_backfill_config.py  test_build_core.py  test_build_relations.py  test_canonical.py  test_checks.py  test_cli.py  test_environment.py  test_excel_safe.py  test_export_manifest.py  test_inventory.py  test_legacy_collect_guard.py  test_live_api.py  test_marts.py  test_schema.py  test_staging.py  test_taxonomy.py  test_writer.py
(+95 files in other folders)
